app/assets/stylesheets/rails_admin/custom/theming.scss
/* ... */
#setup_scheduler_expression_field.selected-4 .visible-1,
#setup_scheduler_expression_field.selected-4 .visible-5 {
  display: none;
  visibility: collapse;
}

//#setup_scheduler_expression_field.selected-5 .visible-1,
//#setup_scheduler_expression_field.selected-5 .visible-2,
//#setup_scheduler_expression_field.selected-5 .visible-3,
//#setup_scheduler_expression_field.selected-5 .visible-4 {
//  display: none;
//  visibility: collapse;
//}

#setup_scheduler_expression_field.selected-0 .hidden-0 {
  display: none;
  visibility: collapse;
}

.toggle-origin {
  border: none;
  background-color: transparent;
}

.toggle-origin:focus, .toggle-origin:active:focus, .toggle-origin.active:focus {
  outline: none;
}

.notify-counter-link {
  border-radius: 500px;
  // position: relative;
  top: -10px;
  min-width: 4px;
  min-height: 4px;
  display: inline-block;
  font-size: 9px;

  &.green {
    background-color: green;
  }
  &.blue {
    background-color: blue;
  }
  &.orange {
    background-color: orange;
  }
  &.red {
    background-color: red;
  }
}

#action-notify {
  padding: 15px;
}

.dashboard, #actions-menu-list {
  .progress {
    margin-bottom: 0;
    float: left;
    width: 95%;
  }
  #links {
    float: right;
    > span {
      padding: 0 12px;
      color: #333333;
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
      position: absolute;
      right: 0;
    }
    &.options-menu {
      position: relative;
      overflow: visible;
      .dropdown-menu {
        right: 0 !important;
        left: auto !important;
        margin-top: 0 !important;
        border-top-right-radius: 0;

        -webkit-transition: all 0.3s;
        -moz-transition: all 0.3s;
        -ms-transition: all 0.3s;
        -o-transition: all 0.3s;
        transition: all 0.3s;

        display: block !important;
        overflow: hidden;
        transform: translateY(-5%);
        opacity: 0;
        height: 0;
        border-top: none;
        top: 20px;
      }
      &.open {
        > span {
          border-color: rgba(0, 0, 0, 0.15);
          background-color: #ffffff;
          border-bottom: none;
          z-index: 1001;
          &:after {
            display: block;
            background-color: #ffffff;
            content: ' ';
            position: absolute;
            width: calc(100% - 34px);
            height: 6px;
            right: 1px;
            bottom: -1px;
            z-index: 1001;
          }
        }
        .dropdown-menu {
          transform: none;
          opacity: 1;
          height: auto;
          border-top: solid 1px rgba(0, 0, 0, 0.15);
          margin-bottom: 25px;
          ul li {
            list-style-type: none;
          }
          a {
            color: $link_color;
          }
        }
      }
    }
  }
}

.wizard {
  li {
    padding: 15px;
    &.next {
      padding: 0;
      color: #3d4046;
      i {
        top: 10px;
        position: relative;
      }
    }
    &.done {
      color: black;
      font-weight: bold;
    }
    &.active {
      color: #5bc0de;
      font-weight: bold;
    }
    &.pending {
      color: gray;
    }
  }
  h6 {
    padding-left: 15px;
    margin-top: 30px;
    display: block;
  }

}

.filter_by_token > span span {
  padding-left: 3px;
}

#actions-menu-list {
  overflow: visible;
  width: 40px;
}

ul#more_actions a {
  color: $link_color;
}

.select2-container--bootstrap {
  width: 50% !important;
}

.select2-container--open .select2-dropdown--above {
  left: 0;
}

.tag {
  overflow: auto;
  span {
    color: #555;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
    cursor: default;
    float: left;
    margin: 5px 0 0 6px;
    padding: 0 6px;
  }
}

